# ducklake-rs

./: .gitignore  Cargo.toml  README.md
crates/ducklake/: Cargo.toml
crates/ducklake-cli/: Cargo.toml  README.md
crates/ducklake-cli/src/: main.rs
crates/ducklake-core/: Cargo.toml
crates/ducklake-core/migrations/: 20250624030102_create_ducklake_tables.sql
crates/ducklake-core/queries/read/: get_next_catalog_id.sql
crates/ducklake-core/queries/write/: create_column.sql  create_table.sql  insert_data_file.sql  log_snapshot_changes.sql  update_table_stats.sql
crates/ducklake-core/src/: config.rs  database.rs  ducklake.rs  error.rs  queries.rs
crates/ducklake-parquet/: Cargo.toml
crates/ducklake-parquet/src/: lib.rs  reader.rs  schema.rs  statistics.rs  writer.rs
crates/ducklake-storage/: Cargo.toml
crates/ducklake-storage/src/: azure.rs  gcs.rs  lib.rs  path.rs  s3.rs
crates/ducklake/src/: lakehouse.rs  lib.rs
crates/duckpond/: Cargo.toml
crates/duckpond-cli/: Cargo.toml  README.md
crates/duckpond-cli/src/: main.rs
crates/duckpond-core/: Cargo.toml
crates/duckpond-core/queries/read/: get_max_snapshot_id.sql  get_next_file_id.sql  get_table_next_row_id.sql  list_tables.sql
crates/duckpond-core/queries/write/: create_schema.sql  update_table_column_stats.sql
crates/duckpond-core/src/: config.rs  database.rs  duckpond.rs  error.rs  lib.rs  models.rs  queries.rs
crates/duckpond-parquet/: Cargo.toml
crates/duckpond-parquet/src/: lib.rs  reader.rs  statistics.rs  writer.rs
crates/duckpond-storage/: Cargo.toml
crates/duckpond-storage/src/: gcs.rs  lib.rs  local.rs  path.rs  s3.rs
crates/duckpond/src/: lakehouse.rs  lib.rs
examples/: basic.rs  comprehensive.rs  duckdb_query.rs  read_data.rs
migrations/: 20250624030102_create_ducklake_tables.sql
queries/read/: get_current_snapshot.sql  list_data_files.sql  list_schemas.sql  prune_files_by_column_stats.sql  show_table_structure.sql
queries/write/: create_snapshot.sql  insert_file_column_stats.sql
src/: config.rs  database.rs  error.rs  lib.rs  models.rs
