[workspace]
members = [
    "crates/duckpond-core",
    "crates/duckpond-storage",
    "crates/duckpond-parquet",
    "crates/duckpond",
    "crates/duckpond-cli",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across all crates
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "uuid",
    "chrono",
] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Arrow/Parquet ecosystem
arrow = "55.0"
parquet = "55.0"
datafusion = "47.0"

# Object storage
object_store = { version = "0.9", features = ["aws", "gcp", "azure"] }
aws-sdk-s3 = "1.0"
futures = "0.3"
tokio-stream = "0.1"
hex = "0.4"
bytes = "1.0"

# CLI
clap = { version = "4.0", features = ["derive", "env"] }
