[package]
name = "ducklake-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line tools for DuckLake administration"
license = "MIT"

[[bin]]
name = "ducklake"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true, features = ["migrate"] }

# Internal dependencies
ducklake = { path = "../ducklake", features = ["full"] }
