[package]
name = "duckpond-cli"
version = "0.0.1"
edition = "2021"
authors = ["Sonny Scroggin <sonny@scrogg.in>"]
description = "Command-line tools for DuckLake administration"
license = "MIT"

[[bin]]
name = "duckpond"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true, features = ["migrate"] }

# Internal dependencies
duckpond = { path = "../duckpond", features = ["full"] }
