[package]
name = "duckpond-parquet"
version = "0.1.0"
edition = "2021"
description = "Parquet I/O operations and statistics for DuckLake"
license = "MIT"

[dependencies]
arrow = { workspace = true }
parquet = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }

# Internal dependencies
duckpond-core = { path = "../duckpond-core" }
duckpond-storage = { path = "../duckpond-storage" }
